# llm

./: .gitignore  Cargo.toml  README.md
scripts/: install_pre_commit.sh
src/: codec.rs  lib.rs  main.rs  tensor.rs
src/codec/: byte_pair_encoding.rs  token.rs  types.rs
