[package]
name = "llm"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }
clap = { version = "4", features = ["derive"] }
anyhow = { version = "1.0.100" }

[profile.profiling]
inherits = "release"
debug = true
